fix hyperlink hover color not showing

--- a/client/src/components/layout.css
+++ b/client/src/components/layout.css
@@ -54,12 +54,18 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  font-family: Big Caslon;
+  font-size: 20px;
+  color: white;
 }
+
 a:active,
+
 a:hover {
   outline-width: 0;
-  color: red;
+  color: #CC2936;
 }
+
 abbr[title] {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
   cursor: help;
